--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-  --col-1: 20%;
-  --col-2: 60%;
-  --col-3: 20%;
+  --col-1: 315px;
+  --col-2: 950px;
+  --col-3: 315px;
   
   --row-1: 140px;   /* header */
   --row-2: 80px;   /* після header */
@@ -20,9 +20,11 @@ html, body {
 
 .layout-table {
   width: 100%;
-  min-height: 800px;
+  min-height: 1100px;
   border-collapse: collapse;
-  table-layout: fixed; /* фіксована сітка */
+  table-layout: fixed;   
+  height: 100%;
+
 }
 
 .layout-table col.col1 { width: var(--col-1); }
@@ -73,7 +75,28 @@ html, body {
   border-radius: 8px;
 }
 
+.block p {
+  margin: 0;
+  padding: 0;
+  line-height: 2;  
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.block h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.block li {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 200;
+}
 /* Списки */
 ul, ol { padding-left: 25px; text-align: left; }
-a { color: #1f618d; text-decoration: none; }
+a { color: #216da0; text-decoration: none; }
 a:hover { text-decoration: underline; }
